--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Document</title>
 </head>
 <body>
-	<p> What u gonna do maaan</p>
-	
+	<h1> What u gonna do maaan</h1>
+	<p> Nothing</p>
+	<p> but true</p>
 </body>
 </html>
